--- a/wwwroot/src/index.html
+++ b/wwwroot/src/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
-<html ng-app="app">
+<html lang="ru" ng-app="app">
     <head>
+    	<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
+		<meta name="description" content="Angular Homeworks">
+		<meta name="author" content="Богданов Семен">
+       
         <base href="/" />
-        <meta charset="utf-8" />
         <title>Angular.Js + D3</title>
     </head>
     <body>
